// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarPanel component should render the expected snapshot when panelType = \`buttons\` 1`] = `
<div
  className="panel-container"
>
  <button
    className="bx--btn bx--btn--field bx--btn--primary"
    disabled={false}
    id="create-button"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    Create a new transaction
  </button>
  <button
    className="bx--btn bx--btn--field bx--btn--primary"
    disabled={false}
    id="import-button"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    Import existing transaction
  </button>
</div>
`;

exports[`SidebarPanel component should render the expected snapshot when panelType = \`filters\` 1`] = `
<div
  className="panel-container"
>
  <h5>
    Filters
  </h5>
</div>
`;

exports[`SidebarPanel component should render the expected snapshot when panelType = \`log\` 1`] = `
<div
  className="panel-container"
>
  <h5>
    Transactions
  </h5>
</div>
`;
